update calculator example to tokio

--- a/capnp-rpc/examples/calculator/Cargo.toml
+++ b/capnp-rpc/examples/calculator/Cargo.toml
@@ -16,8 +16,7 @@ capnpc = { path = "../../../capnpc" }
 [dependencies]
 capnp = { path = "../../../capnp" }
 futures = "0.1"
-tokio-core = "0.1"
-tokio-io = "0.1"
+tokio = "0.1"
 
 [dependencies.capnp-rpc]
 path = "../.."
